--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <body>
     <div class="container">
         <div class="title">
-            <img src="./assets/img/logo.png">
+            <img src="./assets/img/logo.png" id="logo">
             <h1>shopei</h1>
         </div>
-        <img src="./assets/img/loading.gif">
+        <img src="./assets/img/loading.gif" id="loading">
         <p id="loadingInformation">Veuillez patienter</p>
     </div>
     <script>
@@ -28,12 +28,12 @@
 
         setTimeout(() => {
             loadingInformation.innerHTML = "Vérification des informations";
-        }, 1000);
+        }, 2000);
 
         if (loadingAccount) {
             setTimeout(() => {
                 loadingInformation.innerHTML = "Récupération des informations via Admin Services";
-            }, 1000);
+            }, 5000);
 
             setTimeout(() => {
                 loadingInformation.innerHTML = "Connexion en cours";
