--- a/404.html
+++ b/404.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <div class="container">
-        <p>🤔</p>
+        <p class="headingSmiley">🤔</p>
         <h2>404</h2>
         <a href="./views/home.html" class="button">Accueil</a>
     </div>
